Some text updates. Align solution box content text on homepage by controlling media page widths. A different fix for IE < 9 is required. Trying out equalize.

--- a/contents/css/styles.scss
+++ b/contents/css/styles.scss
@@ -286,7 +286,6 @@ footer {
     }
 
     $icon-width: 60px;
-
     .icon {
       img {
         display: inline-block;
@@ -294,7 +293,42 @@ footer {
         width: $icon-width;
       }
     }
-
+  }
+}
+@media (max-width: 768px) {
+  #home-solutions-overview {
+    .solution {
+      .content {
+        height: auto;
+      }
+    }
+  }
+}
+@media (min-width: 768px) {
+  #home-solutions-overview {
+    .solution {
+      .content {
+        min-height: 160px;
+      }
+    }
+  }
+}
+@media (min-width: 992px) {
+  #home-solutions-overview {
+    .solution {
+      .content {
+        min-height: 120px;
+      }
+    }
+  }
+}
+@media (min-width: 1200px) {
+  #home-solutions-overview {
+    .solution {
+      .content {
+        min-height: 100px;
+      }
+    }
   }
 }
 @mixin banner($h1_width: 650px) {
